Overflow fix

--- a/docs/_sass/pages/_post.scss
+++ b/docs/_sass/pages/_post.scss
@@ -1,11 +1,10 @@
 // Post listing
 .post-listing {
-  // background-color: $white;
+  background-color: $background-color;
   position: absolute;
   top: 400px;
   z-index: 233;
   width: 100%;
-  // max-width: 1000px;
   padding: 20px 20px 0;
   -webkit-transform: translate3d(0,0,1px);
   transform: translate3d(0,0,1px);
